specified BC in tables, gave overview and summary of FCT and BC options

--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -7,7 +7,7 @@
 %===============================================================================
 \section{Scalar Transport\label{sec:transport_results}}
 %===============================================================================
-\subsection{Overview}
+\subsection{Overview\label{sec:scalar_overview}}
   \input{content/results/transport/overview}
 \subsection{Convergence Studies\label{sec:convergence}}
   \subsubsection{Overview\label{sec:convergence_overview}}
@@ -34,6 +34,8 @@
   \input{content/results/transport/interface/description}
 \subsection{Three-Region Test Problem\label{sec:three_region}}
   \input{content/results/transport/three_region/description}
+\subsection{Summary\label{sec:scalar_summary}}
+  \input{content/results/transport/summary}
 %===============================================================================
 \section{The Shallow Water Equations\label{sec:shallow_water_results}}
 %===============================================================================
