--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -255,6 +255,8 @@
 \newcommand{\correctionfluxij}{\correctionfluxentry_{i,j}}
 \newcommand{\correctionfluxji}{\correctionfluxentry_{j,i}}
 \newcommand{\correctionfluxmatrix}{\mathbf{\MakeUppercase{\correctionfluxletter}}}
+\newcommand{\antidiffusiveflux}{\correctionfluxentry}
+
 % remainder
 \newcommand{\correctionfluxremainder}{\Delta\MakeUppercase{\correctionfluxletter}}
 \newcommand{\correctionfluxmatrixremainder}{\Delta\correctionfluxmatrix}
