--- a/doc/dissertation/content/results/transport/source_in_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/source_in_absorber/description.tex
@@ -72,6 +72,7 @@ the BC with $L_i^-=L_i^+=1$ for Dirichlet nodes.
 \emph{Parameter} & \emph{Value}\\\midrule
 Number of Cells & $N_{cell} = 32$\\
 Time Discretization & Steady-State\\
+Boundary Conditions & (varies by run)\\\midrule
 Entropy Function & $\entropy(u) = \frac{1}{2}u^2$\\
 Entropy Residual Coefficient & $\entropyresidualcoef = 0.1$\\
 Entropy Jump Coefficient & $\entropyjumpcoef = 0.1$\\\midrule
@@ -84,7 +85,7 @@ FCT Solution Bounds & Analytic\\
    \includegraphics[width=\textwidth]
      {\contentdir/results/transport/source_in_absorber/images/strong1.pdf}
    \caption{Steady-State Solutions for the Source-in-Absorber Problem
-     with Strongly Imposed Dirichlet Boundary Conditions and $L^-=L^+=1$}
+     with Strongly Imposed Dirichlet Boundary Conditions with $L_i^-=L_i^+=1$}
    \label{fig:source_in_absorber_strong1}
 \end{figure}
 %-------------------------------------------------------------------------------
@@ -93,7 +94,7 @@ FCT Solution Bounds & Analytic\\
    \includegraphics[width=\textwidth]
      {\contentdir/results/transport/source_in_absorber/images/strong0.pdf}
    \caption{Steady-State Solutions for the Source-in-Absorber Problem
-     with Strongly Imposed Dirichlet Boundary Conditions and $L^-=L^+=0$}
+     with Strongly Imposed Dirichlet Boundary Conditions with $L_i^-=L_i^+=0$}
    \label{fig:source_in_absorber_strong0}
 \end{figure}
 %-------------------------------------------------------------------------------
