--- a/doc/dissertation/content/results/transport/absorber_ss/description.tex
+++ b/doc/dissertation/content/results/transport/absorber_ss/description.tex
@@ -36,7 +36,9 @@ The run parameters for this test problem are given in Table
 \begin{tabular}{l l}\toprule
 \emph{Parameter} & \emph{Value}\\\midrule
 Number of Cells & $N_{cell} = 8,16,\mathbf{32},64,128,256$\\
-Time Discretization & Steady-State\\\midrule
+Time Discretization & Steady-State\\
+Boundary Conditions & Strong Dirichlet with
+  $\limiterletter_i^-=\limiterletter_i^+=1$\\\midrule
 Entropy Function & $\entropy(\scalarsolution) = \frac{1}{2}\scalarsolution^2$\\
 Entropy Residual Coefficient & $\entropyresidualcoef = 0.1$\\
 Entropy Jump Coefficient & $\entropyjumpcoef = 0.1$\\\midrule
