--- a/doc/paper/content/preliminaries.tex
+++ b/doc/paper/content/preliminaries.tex
@@ -1,5 +1,6 @@
+2 pages
 \begin{itemize}
-\item model equation
+\item model equation (one direction of Sn, Omega)
 \item problem formulation - solution space, domain, BC, IC
 \item application of CGFEM
 \item temporal discretizations - SS, FE, Theta, SSPRK
