--- a/doc/paper/content/results.tex
+++ b/doc/paper/content/results.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
-  \item smooth MMS problem - second-order convergence
+  \item smooth MMS problem - second-order convergence (based on length, could be a summary at the beginning of the results section + appendix)
   \item 1-D, 2-D void-to-absorber (normally-incident)
   \item 2-D obstruction test problem
   \item 1-D source-in-void test problem
