--- a/doc/paper/outline/paper.tex
+++ b/doc/paper/outline/paper.tex
@@ -1,14 +1,13 @@
 \documentclass{elsarticle}
 
 \usepackage{hyperref}
+%\modulolinenumbers[5]
 
-\input{shortcuts}
+\journal{Journal of Joshua Sciences}
 
 \begin{document}
 %------------------------------------------------------------------------------
 \begin{frontmatter}
-
-\journal{Journal of Joshua Sciences}
 
 \title{Application of the Entropy Viscosity Method and the Flux-Corrected Transport
   Algorithm to the Transport Equation using Continuous Finite Elements}
@@ -26,13 +25,16 @@
 \input{content/abstract}
 
 \begin{keyword}
-entropy viscosity \sep FCT \sep CGFEM \sep transport equation
+keyword1 \sep key word 2 \sep keyword3
 \end{keyword}
 
 \end{frontmatter}
 %------------------------------------------------------------------------------
 
+%\linenumbers
+
 \section{Introduction}
+Example citation\cite{dealii}.
 \input{content/introduction}
 
 \section{Preliminaries}
