--- a/doc/paper/content/abstract.tex
+++ b/doc/paper/content/abstract.tex
@@ -1,3 +1,14 @@
 \begin{abstract}
-Here is the abstract.
+The entropy viscosity method introduced by Guermond\cite{guermond_ev},
+in conjunction with the Flux-Corrected Transport algorithm, is
+applied to the transport equation using the continuous finite element
+method. The resulting scheme is second-order accurate in space,
+enforces an entropy inequality, mitigates the formation of spurious
+oscillations, and guarantees the absence of negativities.
+Time discretizations considered include steady-state, Theta methods
+such as explicit and implicit Euler, and strong-stability preserving
+Runge-Kutta (SSPRK) methods.
+The analyzed scheme is shown to be robust with explicit time discretizations
+but encounters significant nonlinear convergence difficulties for steady-state
+and implicit time discretizations.
 \end{abstract}
